--- a/public/backend/sneat/assets/css/custom.css
+++ b/public/backend/sneat/assets/css/custom.css
@@ -1,10 +1,10 @@
-.nav-pills .nav-link.active, .nav-pills .nav-link.active:hover, .nav-pills .nav-link.active:focus {
+/*.nav-pills .nav-link.active, .nav-pills .nav-link.active:hover, .nav-pills .nav-link.active:focus {
     background-color: rgba(105,108,255,.16) !important;
     color: #696cff !important;
     font-weight: 600 !important;
     box-shadow: 0 2px 4px 0 rgb(105 108 255 / 40%) !important;
 }
-
+*/
 /*.dataTables_filter label:first-child {
     display: none;
 }*/
@@ -19,6 +19,11 @@
     margin-top: 0 !important;
     margin-right: 0px !important;
 }*/
+
+/*SideBar App Logo*/
+.app-brand {
+    margin-left: -10px;
+}
 
 .sub-categories-table tbody tr td span.badge {
     text-transform: none !important;
